--- a/task_manager/templates/task_manager/delete_task_list.html
+++ b/task_manager/templates/task_manager/delete_task_list.html
@@ -8,7 +8,7 @@ Delete Task List - {{ block.super }}
 {% block content %}
 <div class="container">
   <h2 class="mt-5">Delete Task List</h2>
-  <p class="mt-3">Are you sure you want to delete "{{ task_list.title }}"?</p>
+  <p class="mt-3">Are you sure you want to delete "{{ object.title }}"?</p>
   <form method="post" class="mt-3">
     {% csrf_token %}
     <button type="submit" class="btn btn-danger">Delete</button>
