--- a/task_manager/templates/task_manager/create_task.html
+++ b/task_manager/templates/task_manager/create_task.html
@@ -2,16 +2,16 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Create Task - {{ task_list.title }} - {{ block.super }}
+  Create Task - {{ task_list.title }} - {{ block.super }}
 {% endblock %}
 
 {% block content %}
-<div class="container">
-  <h2>Create Task</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Create</button>
-  </form>
-</div>
+  <div class="container">
+    <h2 class="mt-5">Create Task</h2>
+    <form method="post" class="mt-3">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <button type="submit" class="btn btn-primary">Create</button>
+    </form>
+  </div>
 {% endblock %}
