--- a/task_manager/templates/task_manager/update_task.html
+++ b/task_manager/templates/task_manager/update_task.html
@@ -2,16 +2,16 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Update Task - {{ task.title }} - {{ block.super }}
+  Update Task - {{ task.title }} - {{ block.super }}
 {% endblock %}
 
 {% block content %}
-<div class="container">
-  <h2>Update Task</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Update</button>
-  </form>
-</div>
+  <div class="container">
+    <h2 class="mt-5">Update Task</h2>
+    <form method="post" class="mt-5">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <button type="submit" class="btn btn-primary">Update</button>
+    </form>
+  </div>
 {% endblock %}
