feat: add if user.is_authenticate for script

--- a/task_manager/templates/home.html
+++ b/task_manager/templates/home.html
@@ -14,15 +14,29 @@
 {% endblock %}
 
 {% block script %}
-  <script src='https://cdn.jsdelivr.net/npm/fullcalendar/index.global.min.js'></script>
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      const calendarEl = document.getElementById('calendar');
-      const calendar = new FullCalendar.Calendar(calendarEl, {
-        initialView: 'dayGridMonth',
-        events: {{ tasks_json|safe }}
+  {% if user.is_authenticated %}
+    <script src='https://cdn.jsdelivr.net/npm/fullcalendar/index.global.min.js'></script>
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+        const calendarEl = document.getElementById('calendar');
+        const calendar = new FullCalendar.Calendar(calendarEl, {
+          initialView: 'dayGridWeek',
+          events: {{ tasks_json|safe }},
+          locale: 'en',
+          eventTimeFormat: {
+            hour: '2-digit',
+            minute: '2-digit',
+            hour12: false
+          },
+          headerToolbar: {
+            left: 'prev,next today',
+            center: 'title',
+            right: 'dayGridMonth,timeGridWeek,timeGridDay'
+          }
+        });
+        calendar.render();
       });
-      calendar.render();
-    });
-  </script>
+    </script>
+
+  {% endif %}
 {% endblock %}
