fix: use text-end insteed of text-right

--- a/task_manager/templates/task_manager/view_task_list.html
+++ b/task_manager/templates/task_manager/view_task_list.html
@@ -12,7 +12,7 @@
         <p>Created by: {{ task_list.created_by.username }}</p>
         <p>Created at: {{ task_list.created_at }}</p>
       </div>
-      <div class="col text-right">
+      <div class="col text-end">
         <div class="btn-group mt-3">
           <a href="{% url 'update_task_list' task_list.id %}" class="btn btn-primary">Update List</a>
           <a href="{% url 'delete_task_list' task_list.id %}" class="btn btn-danger">Delete List</a>
