--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -46,7 +46,8 @@
 <main class="container mt-4">
   {% if messages %}
     {% for message in messages %}
-      <div class="alert alert-{{ message.tags }} mt-3" role="alert">
+      <div class="alert alert-{% if message.tags == 'error' %}danger{% else %}{{ message.tags }}{% endif %} mt-3"
+           role="alert">
         {{ message }}
       </div>
     {% endfor %}
