--- a/task_manager/templates/registration/login.html
+++ b/task_manager/templates/registration/login.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
 {% block title %}Login{% endblock %}
 {% block content %}
-<div class="container">
-  <h2 class="mt-5">Login</h2>
-  <form method="post" class="mt-3">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Login</button>
-  </form>
-</div>
+  <div class="container">
+    <h2 class="mt-5">Login</h2>
+    <form method="post" class="mt-3">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <input type="hidden" name="next" value="{{ request.GET.next }}">
+      <button type="submit" class="btn btn-primary">Login</button>
+    </form>
+  </div>
 {% endblock %}
