feat: use text wrap on event title

--- a/task_manager/templates/home.html
+++ b/task_manager/templates/home.html
@@ -6,6 +6,10 @@
     .fc-event {
       cursor: pointer;
     }
+
+    .fc-event-time, .fc-event-title {
+      white-space: normal;
+    }
   </style>
 {% endblock %}
 
